--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,19 @@ nbbuild/
 dist/
 nbdist/
 .nb-gradle/
+DataHora/**/nbproject/private/
+DataHora/**/nbproject/Makefile-*.mk
+DataHora/**/nbproject/Package-*.bash
+DataHora/build/
+DataHora/nbbuild/
+DataHora/dist/
+DataHora/nbdist/
+DataHora/.nb-gradle/
+RelogioSwing/**/nbproject/private/
+RelogioSwing/**/nbproject/Makefile-*.mk
+RelogioSwing/**/nbproject/Package-*.bash
+RelogioSwing/build/
+RelogioSwing/nbbuild/
+RelogioSwing/dist/
+RelogioSwing/nbdist/
+RelogioSwing/.nb-gradle/
