Soma com Java Swing

--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,32 @@
-**/nbproject/private/
-**/nbproject/Makefile-*.mk
-**/nbproject/Package-*.bash
+/nbproject/private/
+/nbproject/Makefile-*.mk
+/nbproject/Package-*.bash
 build/
 nbbuild/
 dist/
 nbdist/
 .nb-gradle/
-DataHora/**/nbproject/private/
-DataHora/**/nbproject/Makefile-*.mk
-DataHora/**/nbproject/Package-*.bash
+DataHora/nbproject/private/
+DataHora/nbproject/Makefile-*.mk
+DataHora/nbproject/Package-*.bash
 DataHora/build/
 DataHora/nbbuild/
 DataHora/dist/
 DataHora/nbdist/
 DataHora/.nb-gradle/
-RelogioSwing/**/nbproject/private/
-RelogioSwing/**/nbproject/Makefile-*.mk
-RelogioSwing/**/nbproject/Package-*.bash
+RelogioSwing/nbproject/private/
+RelogioSwing/nbproject/Makefile-*.mk
+RelogioSwing/nbproject/Package-*.bash
 RelogioSwing/build/
 RelogioSwing/nbbuild/
 RelogioSwing/dist/
 RelogioSwing/nbdist/
 RelogioSwing/.nb-gradle/
+SomaSwing/nbproject/private/
+SomaSwing/nbproject/Makefile-*.mk
+SomaSwing/nbproject/Package-*.bash
+SomaSwing/build/
+SomaSwing/nbbuild/
+SomaSwing/dist/
+SomaSwing/nbdist/
+SomaSwing/.nb-gradle/
